fix z-index

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -7,7 +7,7 @@
 	animation none !important
 
 nav
-	z-index 5 !important
+	z-index 10 !important
 
 table.sample-table
 	width 100%
